--- a/CsLox/CsLox.csproj
+++ b/CsLox/CsLox.csproj
@@ -46,7 +46,9 @@
     <Compile Include="CsLox.cs" />
     <Compile Include="Enums\TokenType.cs" />
     <Compile Include="Exceptions\ParseException.cs" />
+    <Compile Include="Exceptions\RuntimeException.cs" />
     <Compile Include="Expr.cs" />
+    <Compile Include="Interpreter.cs" />
     <Compile Include="Parser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scanner.cs" />
