--- a/CsLox/CsLox.csproj
+++ b/CsLox/CsLox.csproj
@@ -49,9 +49,11 @@
     <Compile Include="Exceptions\RuntimeException.cs" />
     <Compile Include="Expr.cs" />
     <Compile Include="Interpreter.cs" />
+    <Compile Include="LoxEnvironment.cs" />
     <Compile Include="Parser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scanner.cs" />
+    <Compile Include="Stmt.cs" />
     <Compile Include="Token.cs" />
   </ItemGroup>
   <ItemGroup>
