--- a/CsLoxTests/CsLoxTests.csproj
+++ b/CsLoxTests/CsLoxTests.csproj
@@ -48,8 +48,12 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CommentsTest.cs" />
+    <Compile Include="AssignmentTests.cs" />
+    <Compile Include="BlockTests.cs" />
+    <Compile Include="BoolTests.cs" />
+    <Compile Include="CommentsTests.cs" />
     <Compile Include="CsLoxTests.cs" />
+    <Compile Include="PrintTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScanningTests.cs" />
   </ItemGroup>
