--- a/CsLoxTests/CsLoxTests.csproj
+++ b/CsLoxTests/CsLoxTests.csproj
@@ -53,6 +53,9 @@
     <Compile Include="BoolTests.cs" />
     <Compile Include="CommentsTests.cs" />
     <Compile Include="CsLoxTests.cs" />
+    <Compile Include="ForTests.cs" />
+    <Compile Include="IfTests.cs" />
+    <Compile Include="LogicalOperatorTests.cs" />
     <Compile Include="NilTests.cs" />
     <Compile Include="NumberTests.cs" />
     <Compile Include="OperatorTests.cs" />
@@ -60,6 +63,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScanningTests.cs" />
     <Compile Include="StringTests.cs" />
+    <Compile Include="VariableTests.cs" />
+    <Compile Include="WhileTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
