--- a/CsLoxTests/CsLoxTests.csproj
+++ b/CsLoxTests/CsLoxTests.csproj
@@ -51,6 +51,8 @@
     <Compile Include="AssignmentTests.cs" />
     <Compile Include="BlockTests.cs" />
     <Compile Include="BoolTests.cs" />
+    <Compile Include="BreakTests.cs" />
+    <Compile Include="ClosureTests.cs" />
     <Compile Include="CommentsTests.cs" />
     <Compile Include="CsLoxTests.cs" />
     <Compile Include="ForTests.cs" />
@@ -61,6 +63,7 @@
     <Compile Include="OperatorTests.cs" />
     <Compile Include="PrintTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReturnTests.cs" />
     <Compile Include="ScanningTests.cs" />
     <Compile Include="StringTests.cs" />
     <Compile Include="VariableTests.cs" />
@@ -91,6 +94,8 @@
     <None Include="TestScripts\block\scope.lox" />
     <None Include="TestScripts\bool\equality.lox" />
     <None Include="TestScripts\bool\not.lox" />
+    <None Include="TestScripts\break\break_loop.lox" />
+    <None Include="TestScripts\break\break_is_outside_loop.lox" />
     <None Include="TestScripts\call\bool.lox" />
     <None Include="TestScripts\call\nil.lox" />
     <None Include="TestScripts\call\num.lox" />
@@ -258,6 +263,9 @@
     <None Include="TestScripts\operator\subtract.lox" />
     <None Include="TestScripts\operator\subtract_nonnum_num.lox" />
     <None Include="TestScripts\operator\subtract_num_nonnum.lox" />
+    <None Include="TestScripts\operator\ternary.lox" />
+    <None Include="TestScripts\operator\ternary_missing_else.lox" />
+    <None Include="TestScripts\operator\ternary_missing_then.lox" />
     <None Include="TestScripts\precedence.lox" />
     <None Include="TestScripts\print\missing_argument.lox" />
     <None Include="TestScripts\regression\394.lox" />
