--- a/CsLox/CsLox.csproj
+++ b/CsLox/CsLox.csproj
@@ -45,6 +45,7 @@
     <Compile Include="AstPrinter.cs" />
     <Compile Include="Clock.cs" />
     <Compile Include="CsLox.cs" />
+    <Compile Include="Enums\FunctionType.cs" />
     <Compile Include="Enums\TokenType.cs" />
     <Compile Include="Exceptions\BreakException.cs" />
     <Compile Include="Exceptions\ParseException.cs" />
@@ -57,6 +58,7 @@
     <Compile Include="LoxEnvironment.cs" />
     <Compile Include="Parser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resolver.cs" />
     <Compile Include="Scanner.cs" />
     <Compile Include="Stmt.cs" />
     <Compile Include="Token.cs" />
