--- a/CsLox/CsLox.csproj
+++ b/CsLox/CsLox.csproj
@@ -45,6 +45,7 @@
     <Compile Include="AstPrinter.cs" />
     <Compile Include="Clock.cs" />
     <Compile Include="CsLox.cs" />
+    <Compile Include="Enums\ClassType.cs" />
     <Compile Include="Enums\FunctionType.cs" />
     <Compile Include="Enums\TokenType.cs" />
     <Compile Include="Exceptions\BreakException.cs" />
@@ -54,8 +55,10 @@
     <Compile Include="Expr.cs" />
     <Compile Include="Interfaces\ILoxCallable.cs" />
     <Compile Include="Interpreter.cs" />
+    <Compile Include="LoxClass.cs" />
     <Compile Include="LoxFunction.cs" />
     <Compile Include="LoxEnvironment.cs" />
+    <Compile Include="LoxInstance.cs" />
     <Compile Include="Parser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resolver.cs" />
