--- a/CsLox/CsLox.csproj
+++ b/CsLox/CsLox.csproj
@@ -43,7 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AstPrinter.cs" />
-    <Compile Include="Clock.cs" />
+    <Compile Include="NativeFunctions\Clock.cs" />
     <Compile Include="CsLox.cs" />
     <Compile Include="Enums\ClassType.cs" />
     <Compile Include="Enums\FunctionType.cs" />
@@ -60,6 +60,7 @@
     <Compile Include="LoxFunction.cs" />
     <Compile Include="LoxEnvironment.cs" />
     <Compile Include="LoxInstance.cs" />
+    <Compile Include="NativeFunctions\Power.cs" />
     <Compile Include="Parser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resolver.cs" />
